# VKR_Morozov

./: .gitignore  CMakeLists.txt  README.md  joystickworker.cpp  joystickworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialmanager.cpp  serialmanager.h
